[package]
name = "beam"
version = "0.1.0"
authors = ["oeb"]
edition = "2018"

[dependencies]
gl = "0.13"
glutin = "0.21"
cgmath = "0.16.1"
image = "0.19"
time = "0.1"
warmy = "0.7.2"
failure = "0.1"
lazy_static = "1.0"
glsl-layout = { version = "0.1", features = ["cgmath"] }

[dependencies.mg]
path = "../mg"

[dependencies.collada]
path = "../collada"
